# SPDX-FileCopyrightText: 2025 Marco Mambelli
# SPDX-License-Identifier: Apache-2.0
[project]
# PyPI recommends all-lowercase, dash-separated names
name = "recipe-unitconverter"
version = "0.0.1"
description = "An example Python project, convert units for recipes"
authors = [{ name = "Marco Mambelli", email = "marcom@fnal.gov" }]
requires-python = ">=3.9"
dependencies = [
  "numpy"
]

[build-system]
requires = ["setuptools>=51.2", "wheel>=0.36.2", "setuptools_scm>=6.3.1"]
build-backend = "setuptools.build_meta"
#[tool.setuptools_scm]
#write_to = "version.py"

# [tool.pytest.ini_options]
# minversion = "6.0"
# # -n is used by pytest-xdist. "pytest: error: unrecognized arguments: -n" means that the plugin is missing. Install the development dependencies
# # pytest-xdist is not _mandatory_ for the tests to work, but it is recommended
# addopts = "-l -v --durations=30 --durations-min=0.05 --strict-config --strict-markers --showlocals -n 4"
# log_level = "debug"
# testpaths = "src/unitconverter"
# required_plugins = ["pytest-timeout>=1.4.2", "pytest-postgresql >= 3.0.0"]
# timeout = 90
# flake8-max-line-length = "120"
# flake8-ignore = "E501 E303 E302 E261 E265 E203 W503 W504"
# flake8-show-source = "True"
# flake8-statistics = "True"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.codespell]
exclude-file = ".codespell/ignore_lines.txt"
ignore-words = ".codespell/ignore_words.txt"

[tool.isort]
src_paths = ["doc", "src"]
py_version = 36
profile = "black"
line_length = 120
combine_star = "True"
float_to_top = "True"
order_by_type = "True"
dedup_headings = "True"
known_first_party = ["unitconverter"]
lines_between_types = 1
force_alphabetical_sort_within_sections = "True"

[tool.ruff]
line-length = 120
# indent-width = 4
target-version = "py39"
# Gives an error w/ format
extend-exclude = []

[tool.ruff.format]
#exclude = []
